attributes.7: Minor wording correction [*]
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -506,7 +506,7 @@ because a substantial portion of the GNU C Library accesses them without
 synchronization.
 Unlike
 .IR race ,
-that causes both readers and
+which causes both readers and
 writers of internal objects to be regarded as MT-Unsafe and AS-Unsafe,
 this mark is applied to writers only.
 Writers remain equally MT-Unsafe and AS-Unsafe to call,
