attributes.7: Comment out AS-Unsafe and AC-Unsafe headings
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -108,8 +108,8 @@ safe for inlining.
 .\" environment cannot be performed atomically then it is also possible that
 .\" the environment encountered is internally inconsistent.
 .TP
-.IR MT-Unsafe ", " AS-Unsafe ", " AC-Unsafe
-.IR MT-Unsafe ", " AS-Unsafe ", " AC-Unsafe
+.IR MT-Unsafe \" ", " AS-Unsafe ", " AC-Unsafe
+.IR MT-Unsafe \" ", " AS-Unsafe ", " AC-Unsafe
 functions are not
 safe to call within the safety contexts described above.
 Calling them
