attributes.7: Rewrite description of MT-Unsafe
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -110,13 +110,14 @@ safe for inlining.
 .TP
 .IR MT-Unsafe \" ", " AS-Unsafe ", " AC-Unsafe
 .IR MT-Unsafe \" ", " AS-Unsafe ", " AC-Unsafe
-functions are not
-safe to call within the safety contexts described above.
-Calling them
-within such contexts invokes undefined behavior.
-
-Functions not explicitly documented as safe in a safety context should
-be regarded as Unsafe.
+functions are not safe to call in a multithreaded programs.
+.\" functions are not
+.\" safe to call within the safety contexts described above.
+.\" Calling them
+.\" within such contexts invokes undefined behavior.
+.\" 
+.\" Functions not explicitly documented as safe in a safety context should
+.\" be regarded as Unsafe.
 .TP
 .I Preliminary
 .I Preliminary
