attributes.7: Comment out an AC-Safety remark
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -531,21 +531,21 @@ followed by the identifier with a write lock, and
 .I all
 calls to functions marked with the identifier
 by itself with a read lock.
-The non-recursive locking removes the MT-Safety problem,
-but it trades one AS-Safety problem for another,
-so use in asynchronous signals remains undefined.
-
-.\" But what if, instead of marking modifiers with const:id and readers
-.\" with just id, we marked writers with race:id and readers with ro:id?
-.\" Instead of having to define each instance of 'id', we'd have a
-.\" general pattern governing all such 'id's, wherein race:id would
-.\" suggest the need for an exclusive/write lock to make the function
-.\" safe, whereas ro:id would indicate 'id' is expected to be read-only,
-.\" but if any modifiers are called (while holding an exclusive lock),
-.\" then ro:id-marked functions ought to be guarded with a read lock for
-.\" safe operation.  ro:env or ro:locale, for example, seems to convey
-.\" more clearly the expectations and the meaning, than just env or
-.\" locale.
+.\" The non-recursive locking removes the MT-Safety problem,
+.\" but it trades one AS-Safety problem for another,
+.\" so use in asynchronous signals remains undefined.
+.\" 
+.\" .\" But what if, instead of marking modifiers with const:id and readers
+.\" .\" with just id, we marked writers with race:id and readers with ro:id?
+.\" .\" Instead of having to define each instance of 'id', we'd have a
+.\" .\" general pattern governing all such 'id's, wherein race:id would
+.\" .\" suggest the need for an exclusive/write lock to make the function
+.\" .\" safe, whereas ro:id would indicate 'id' is expected to be read-only,
+.\" .\" but if any modifiers are called (while holding an exclusive lock),
+.\" .\" then ro:id-marked functions ought to be guarded with a read lock for
+.\" .\" safe operation.  ro:env or ro:locale, for example, seems to convey
+.\" .\" more clearly the expectations and the meaning, than just env or
+.\" .\" locale.
 .TP
 .I sig
 Functions marked with
