--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -567,9 +567,9 @@ There is no safe way to guarantee the original signal handler is
 restored in case of asynchronous cancellation,
 therefore so-marked functions are also AC-Unsafe.
 
-.\" fixme: at least deferred cancellation should get it right, and would
-.\" obviate the restoring bit below, and the qualifier above.
-
+.\" .\" fixme: at least deferred cancellation should get it right, and would
+.\" .\" obviate the restoring bit below, and the qualifier above.
+.\" 
 Besides the measures recommended to work around the
 MT-Safety and AS-Safety problem,
 in order to avert the cancellation problem,
