attributes.7: Comment out an AC-Safety remark
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -551,7 +551,7 @@ by itself with a read lock.
 Functions marked with
 .I sig
 as a MT-Safety issue
-(that implies an identical AS-Safety issue, omitted for brevity)
+.\" (that implies an identical AS-Safety issue, omitted for brevity)
 may temporarily install a signal handler for internal purposes,
 which may interfere with other uses of the signal,
 identified after a colon.
