attributes.7: Comment out some text on cancellation
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -563,20 +563,20 @@ temporary signal;
 blocking that signal before the call and resetting its
 handler afterwards is recommended.
 
-There is no safe way to guarantee the original signal handler is
-restored in case of asynchronous cancellation,
-therefore so-marked functions are also AC-Unsafe.
-
+.\" There is no safe way to guarantee the original signal handler is
+.\" restored in case of asynchronous cancellation,
+.\" therefore so-marked functions are also AC-Unsafe.
+.\" 
 .\" .\" fixme: at least deferred cancellation should get it right, and would
 .\" .\" obviate the restoring bit below, and the qualifier above.
 .\" 
-Besides the measures recommended to work around the
-MT-Safety and AS-Safety problem,
-in order to avert the cancellation problem,
-disabling asynchronous cancellation
-.I and
-installing a cleanup handler to restore the signal to the desired state
-and to release the mutex are recommended.
+.\" Besides the measures recommended to work around the
+.\" MT-Safety and AS-Safety problem,
+.\" in order to avert the cancellation problem,
+.\" disabling asynchronous cancellation
+.\" .I and
+.\" installing a cleanup handler to restore the signal to the desired state
+.\" and to release the mutex are recommended.
 .TP
 .I term
 Functions marked with
