attributes.7: Comment out !posix text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -804,17 +804,18 @@ avoiding the option may be a good alternative to
 using full pathnames or file descriptor-relative (e.g.,
 .BR openat (2))
 system calls.
-.TP
-.I !posix
-This remark, as an MT-Safety, AS-Safety or AC-Safety note to a function,
-indicates the safety status of the function is known to differ
-from the specified status in the POSIX standard.
-For example, POSIX does not require a function to be Safe,
-but our implementation is, or vice-versa.
-
-For the time being, the absence of this remark does not imply the safety
-properties we documented are identical to those mandated by POSIX for
-the corresponding functions.
+.\" .TP
+.\" .I !posix
+.\" This remark, as an MT-Safety, AS-Safety or AC-Safety
+.\" note to a function,
+.\" indicates the safety status of the function is known to differ
+.\" from the specified status in the POSIX standard.
+.\" For example, POSIX does not require a function to be Safe,
+.\" but our implementation is, or vice-versa.
+.\" 
+.\" For the time being, the absence of this remark does not imply the safety
+.\" properties we documented are identical to those mandated by POSIX for
+.\" the corresponding functions.
 .TP
 .I :identifier
 Annotations may sometimes be followed by identifiers,
