attributes.7: Comment out text on kernels
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -854,13 +854,13 @@ context.
 Some safety annotations may be conditional,
 in that they only apply if a boolean expression involving arguments,
 global variables or even the underlying kernel evaluates evaluates to true.
-Such conditions as
-.I /hurd
-or
-.I /!linux!bsd
-indicate the preceding marker only
-applies when the underlying kernel is the HURD,
-or when it is neither Linux nor a BSD kernel, respectively.
+.\" Such conditions as
+.\" .I /hurd
+.\" or
+.\" .I /!linux!bsd
+.\" indicate the preceding marker only
+.\" applies when the underlying kernel is the HURD,
+.\" or when it is neither Linux nor a BSD kernel, respectively.
 .I !ps
 and
 .I /one_per_line
