attributes.7: Wording fix [*]
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -861,6 +861,7 @@ global variables or even the underlying kernel evaluates evaluates to true.
 .\" indicate the preceding marker only
 .\" applies when the underlying kernel is the HURD,
 .\" or when it is neither Linux nor a BSD kernel, respectively.
+For example,
 .I !ps
 and
 .I /one_per_line
