attributes.7: Comment out 'mem' text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -767,25 +767,25 @@ which makes the former safe.
 .\" If this is the case,
 .\" suspending asynchronous cancellation for the duration of calls
 .\" to such functions is recommended.
-.TP
-.I mem
-Functions annotated with
-.I mem
-as an AC-Safety issue may leak
-memory if asynchronous thread cancellation interrupts their execution.
-
-The problem is similar to that of file descriptors: there is no atomic
-interface to allocate memory and store its address in the argument to a
-cleanup handler,
-or to release it and remove its address from that argument,
-without at least temporarily disabling asynchronous cancellation,
-which these functions do not do.
-
-This remark does not by itself cause a function to be regarded as
-generally AC-Unsafe.
-However, cumulative effects of such leaks may be
-severe enough for some programs that disabling asynchronous cancellation
-for the duration of calls to such functions may be required.
+.\" .TP
+.\" .I mem
+.\" Functions annotated with
+.\" .I mem
+.\" as an AC-Safety issue may leak
+.\" memory if asynchronous thread cancellation interrupts their execution.
+.\" 
+.\" The problem is similar to that of file descriptors: there is no atomic
+.\" interface to allocate memory and store its address in the argument to a
+.\" cleanup handler,
+.\" or to release it and remove its address from that argument,
+.\" without at least temporarily disabling asynchronous cancellation,
+.\" which these functions do not do.
+.\" 
+.\" This remark does not by itself cause a function to be regarded as
+.\" generally AC-Unsafe.
+.\" However, cumulative effects of such leaks may be
+.\" severe enough for some programs that disabling asynchronous cancellation
+.\" for the duration of calls to such functions may be required.
 .TP
 .I cwd
 Functions marked with
