attributes.7: Coment out piece of AS-Unsafe text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -510,7 +510,9 @@ Unlike
 which causes both readers and
 writers of internal objects to be regarded as MT-Unsafe and AS-Unsafe,
 this mark is applied to writers only.
-Writers remain equally MT-Unsafe and AS-Unsafe to call,
+Writers remain \" equally
+MT-Unsafe \" and AS-Unsafe
+to call,
 but the then-mandatory constness of objects they
 modify enables readers to be regarded as MT-Safe and AS-Safe (as long as
 no other reasons for them to be unsafe remain),
