attributes.7: Comment out piece of AS-Safe text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -514,8 +514,8 @@ Writers remain \" equally
 MT-Unsafe \" and AS-Unsafe
 to call,
 but the then-mandatory constness of objects they
-modify enables readers to be regarded as MT-Safe and AS-Safe (as long as
-no other reasons for them to be unsafe remain),
+modify enables readers to be regarded as MT-Safe \" and AS-Safe
+(as long as no other reasons for them to be unsafe remain),
 since the lack of synchronization is not a problem when the
 objects are effectively constant.
 
