attributes.7: Wording improvement [*]
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man7/attributes.7
+++ b/man7/attributes.7
@@ -524,7 +524,7 @@ The identifier that follows the
 mark will appear by itself as a safety note in readers.
 Programs that wish to work around this safety issue,
 so as to call writers, may use a non-recursive
-.I rwlock
+read-write lock
 associated with the identifier, and guard
 .I all
 calls to functions marked with
